# ProgGen

./: .gitignore  ProgGen.cabal  ProgGen.lhs  README.md
Benchmarks/: Criterion.csv  Criterion.html  depth4.txt
Test/: LazyCheck.hs  LazySmallCheck.hs
