Name:                ProgGen
Version:             2012.0.1
Synopsis:            Lazy generation of canonical test programs
Description:         See paper
Homepage:            https://github.com/jasonreich/ProgGen
License:             BSD3
License-file:        LICENSE
Author:              Jason S. Reich
Maintainer:          jason at cs.york.ac.uk
Category:            Testing
Build-type:          Simple
Cabal-version:       >=1.10

Executable ProgGen
  Main-is:             ProgGen.lhs
  Default-Language:    Haskell2010
  Build-depends:       base >=4 && < 5, deepseq >= 1.2 && < 2,
                       ghc >= 7 && < 8, syb >= 0.2 && < 0.4,
                       template-haskell >= 2.5 && < 3, 
                       uniplate >= 1.3 && < 2,
                       containers >= 0.4 && < 1,
                       mtl >= 2.0.1 && < 3
  GHC-Options:         -rtsopts

Source-Repository head
  type:     git
  location: https://github.com/jasonreich/ProgGen
